--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,5 +3,5 @@
 
 {% block content %}
   <h1 style="font-size: 2rem; color: #1e3a8a;">Привет, {{ user.first_name|default:user.username }}!</h1>
-  <p style="font-size: 1.1rem;">Добро пожаловать в рабочий кабинет</p>
+  <p style="font-size: 1.1rem;">Добро пожаловать в рабочий кабинет, сейчас у нас есть возможнсть рабоы с 2-умя сервисами: ознакомиться с ними можно в боковом меню</p>
 {% endblock %}
